test/sema/typeck/class/unnamed-field-assignment-unknown.out
error: unknown field `2` for type `Foo`
--> unnamed-field-assignment-unknown.dora:3:5
 | class Foo(Int, Bool)
 | fn f(x: Foo, v: String) {
 |     x.2 = v;
       ~~~
 | }
 | 
1 error found.
