test/sema/typeck/class/unnamed-field-assignment-unknown.dora
class Foo(Int, Bool)
fn f(x: Foo, v: String) {
    x.2 = v;
}
